pre-flight: Correct tofqdns-precache container name
We accidentally duplicated the container name when we separated the init
container into two. We don't refer to this anywhere directly so any
other name should be fine.

fixes 5b796aaab646196974aaf130846ad8f595d395f2

Signed-off-by: Ray Bejjani <ray@isovalent.com>

--- a/install/kubernetes/cilium/charts/preflight/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/preflight/templates/daemonset.yaml
@@ -82,7 +82,7 @@ spec:
         - image: "{{ .Values.global.registry }}/{{ .Values.image }}:{{ .Values.global.tag }}"
 {{- end }}
           imagePullPolicy: {{ .Values.global.pullPolicy }}
-          name: cilium-pre-flight-check
+          name: cilium-pre-flight-fqdn-precache
           command: ["/bin/sh"]
           args:
           - -c
